--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "jsonfile": "^6.1.0"
+    "jsonfile": "^6.1.0",
+    "nanoid": "^5.0.9",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
