--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "https://ralphbolliger.ch"
   },
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
-    "dev": "NODE_ENV=development nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "engines": {
     "node": "^23.7.0"
