Added generation of schema.json from existing git-excluded me.json. Added nodemon.json in order to prevent nodemon from restarting every time the schema.json changes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# IDE files and folders
 .idea
 node_modules
 *.code-workspace
 
-# Ignore environment files
+# Environment files
 .env*
+
+# Misc
+me.json
