--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "helmet": "^8.1.0",
     "jsonfile": "^6.1.0",
     "nanoid": "^5.1.5",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
