--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "engines": {
     "node": "^23.7.0"
   },
+  "prettier": "@darkstar/prettier",
   "type": "module",
   "main": "index.js",
   "dependencies": {
@@ -37,6 +38,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@darkstar/prettier": "^1.0.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
